--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ numpy
 accelerate
 protobuf
 sentencepiece
-
 sled
 py-sled
+rouge-score
+bert-score
 # When in a new H100 or any GPU
 ## sudo apt-get install python3-dev
+# align score and UniEval
+# python -m spacy download en_core_web_sm
