all scores tqdm

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,4 @@ bert-score
 # When in a new H100 or any GPU
 ## sudo apt-get install python3-dev
 # align score and UniEval
-# python -m spacy download en_core_web_sm
+# python3 -m spacy download en_core_web_sm
